--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "scroll-to": "0.0.2",
+    "serialize-javascript": ">=2.1.1",
     "styled-components": "^4.4.1",
     "uid-safe": "^2.1.5"
   }
