0008 Configuring work history cards.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.6.0",
     "material-ui": "^0.20.2",
-    "next": "^8.1.0",
+    "next": "^9.1.5",
     "next-optimized-images": "^2.5.4",
     "node-sass": "^4.13.0",
     "passport": "^0.4.0",
@@ -39,6 +39,8 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-modal": "^3.11.1",
+    "react-remove-scroll": "^2.2.0",
+    "react-scroll-locky": "^1.5.0",
     "scroll-to": "0.0.2",
     "serialize-javascript": ">=2.1.1",
     "styled-components": "^4.4.1",
