--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "express-session": "^1.17.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^7.1.0",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.6.0",
     "material-ui": "^0.20.2",
     "next": "^9.1.5",
+    "next-compose-plugins": "^2.2.0",
     "next-optimized-images": "^2.5.4",
     "node-sass": "^4.13.0",
     "passport": "^0.4.0",
