--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "proj_1",
   "version": "1.0.0",
-  "engines" : {
-    "node" : "12.6.0"
+  "engines": {
+    "node": "12.6.0"
   },
   "description": "",
   "main": "index.js",
@@ -23,6 +23,7 @@
     "axios": "^0.18.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
