049 - Deployed to GAE

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PROD_URL = https://brettkgamble-portfolio.herokuapp.com/
+OLD_PROD_URL = https://brettkgamble-portfolio.herokuapp.com/
+PROD_URL = https://brettkgamblecom.appspot.com
 BASE_URL=http://localhost:3000
