--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-ga": "^2.7.0",
     "react-modal": "^3.11.1",
     "react-remove-scroll": "^2.2.0",
     "react-scroll-locky": "^1.5.0",
