--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 OLD_PROD_URL = https://brettkgamble-portfolio.herokuapp.com/
 PROD_URL = https://brettkgamblecom.appspot.com
-BASE_URL=http://localhost:3000
+BASE_URL=http://localhost:3000/
